[Add] resize grid and reset grid

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 <body>
 
     <div class="block-container"></div>
+    <div class="main">
+        <h1>Etch a Sketch</h1>
+        <p>Number of Grid per side <input type="text" class="input-grid"></p>
+        <div class="buttons">
+            <button class="sumbit">Sumbit</button>
+            <button class="reset">Reset</button>
+        </div>
+    </div>
 
 </body>
 </html>
